Checkpoint -- non-working, but indicates working edge toward completing https://github.com/MichaelRWolf/Wolf-Motor/issues/1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,33 @@
-# Copied from https://gitlab.com/CLIUtils/modern-cmake/-/blob/master/examples/extended-project/CMakeLists.txt
+# Initialized from https://gitlab.com/CLIUtils/modern-cmake/-/blob/master/examples/extended-project/CMakeLists.txt
 
-# Works with 3.11 and tested through 3.19
 cmake_minimum_required(VERSION 3.11...3.19)
 
-# Project name and a few useful settings. Other commands can pick up the results
+set(CMAKE_C_COMPILER     "/usr/bin/gcc")
+set(CMAKE_CXX_COMPILER "/usr/bin/g++")
+
+set(CMAKE_CXX_STANDARD 11) 
+
 project(
    Motor
    VERSION 0.1
    DESCRIPTION "An example TS project with CMake"
-   LANGUAGES C CXX)
+   LANGUAGES C CXX
+)
 
+include(CTest)
+enable_testing()
+
+add_subdirectory("${PROJECT_SOURCE_DIR}/extern/googletest" "extern/googletest") 
+
+# hello_c -- Hello World, written in C
 add_executable(hello_c hello.c) 
-add_executable(MotorTest MotorTest.c Motor.c)
+
+# hello_c -- Hello World, written in C++
+# add_executable(hello_cpp hello.cpp) 
+
+# MotorTest
+add_executable(                 MotorTest  MotorTest.c Motor.c)
+target_link_libraries(          MotorTest gtest)
+target_include_directories(MotorTest PUBLIC ${UNIT_UNDER_TEST_INCLUDE_DIR})
+
+# add_test(smoke MotorTest)
