Passed: build fb_lib + build fb_app linking to fb_lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,17 +2,41 @@
 
 cmake_minimum_required(VERSION 3.11)
 
+# ================================================================
+
 project(
-   fb_app
-   VERSION      0.1
-   DESCRIPTION  "For CMake Fluency"
-   LANGUAGES    C
+    fizz-buzz_dojo
+    VERSION      0.1
+    DESCRIPTION  "FizzBuzz - Dojo to build fluency in CMake and Google Test"
+    LANGUAGES    C
 )
 
+
 add_executable(
-   fb_app
-   fb_app.c
+    fb_app
+    fb_app.c
 )
+
+
+add_library(
+    fb_stl
+    STATIC
+    fb.c
+)
+
+
+target_link_libraries(
+    fb_app
+    fb_stl
+)
+
+
+target_include_directories(
+    fb_stl PUBLIC
+    .
+)
+
+# ================================================================
 
 project(
    wolf_motor        # name
