New failing test:  build fb_test (w/ google test)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,13 @@ target_include_directories(
     .
 )
 
+
+add_executable(
+    fb_test
+    fb_test.cpp
+)
+
+
 # ================================================================
 
 project(
